--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "lab404/laravel-impersonate",
+  "name": "davo81/laravel-impersonate",
   "description": "Laravel Impersonate is a plugin that allows to you to authenticate as your users.",
   "type": "library",
   "keywords": [
@@ -15,7 +15,7 @@
   ],
   "require": {
     "php": ">=7.1.3",
-    "laravel/framework": "5.8.* | ^6.0"
+    "laravel/framework": "5.8.* | ~6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.5 | ^8.0",
